# xara_mesh

./: CMakeLists.txt  README.md  pyproject.toml
src/xara_mesh/schewchuk/: __init__.py  _triangle_ct.py  core.py  trio.py
